# SkillBridge

./: .dockerignore  .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  Dockerfile  Makefile  README.md  docker-compose.yml  perenos.md  pyproject.toml
.github/workflows/: ci.yml
apps/accounts/: admin.py  models.py  tests.py  urls.py
apps/accounts/migrations/: 0001_initial.py
apps/common/: models.py  serializers.py  views.py
apps/common/tests/: test_dummy.py  test_health.py
apps/skills/: apps.py
config/: settings.py  urls.py
docs/: 01_Project_Overview.md  02_Tech_Stack.md  03_Project_Structure.md  04_Architecture.md  05_Database.md  06_Domain_Model.md  07_HTTP_Layer.md  DEVELOPMENT.md
