[project]
name = "skillbridge"
version = "0.1.0"
description = "Skill exchange platform"
requires-python = ">=3.13"
dependencies = [
    "django>=6.0.7",
]

[tool.black]
line-length = 88
target-version = ["py313"]

[tool.ruff]
line-length = 88
target-version = "py313"

[tool.ruff.lint]
select = [
    "E",
    "F",
    "I",
    "UP",
    "B",
    "SIM",
    "C4",
    "DJ"
]

ignore = [
]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "config.settings"
python_files = [
    "test_*.py",
    "*_test.py"
]

[dependency-groups]
dev = [
    "black>=26.5.1",
    "coverage>=7.15.0",
    "pre-commit>=4.6.0",
    "pytest>=9.1.1",
    "pytest-django>=4.12.0",
    "ruff>=0.15.20",
]
