[project]
name = "skillbridge"
version = "0.1.0"
description = "SkillBridge — platform for knowledge and skill exchange"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "django>=5.0",
    "psycopg[binary]>=3.2",
    "redis>=5.0",
    "django-environ>=0.11",
    "pillow>=10.0",
    "gunicorn>=22.0",
    "whitenoise>=6.0",
]

[dependency-groups]
dev = [
    "ruff>=0.6.0",
    "pytest>=8.0",
    "pytest-django>=4.8",
    "pre-commit>=3.7",
    "coverage>=7.6",
]

[tool.ruff]
target-version = "py313"
line-length = 88
src = ["apps", "config"]
extend-exclude = [
    "*/migrations/*",
    "*/tests/*",
]

[tool.ruff.lint]
select = [
    "E",
    "F",
    "I",
    "UP",
    "B",
    "DJ",
]
ignore = [
    "DJ001",
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "config.settings"
python_files = ["test_*.py", "*_test.py", "tests.py"]
addopts = "-ra --strict-markers --strict-config"
testpaths = ["apps"]

[tool.ruff.lint.per-file-ignores]
"config/settings.py" = [
    "E501",
]
# Миграции автогенерируются Django — не линтим и не форматируем.
"*/migrations/*" = [
    "E501",
]
"tests.py" = [
    "S101",  # pytest.mark.usefixtures в тестах ок
]
